--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
       <!--footer logo-->
       <a href="/">WebStudio</a>
       <!--footer contact-->
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
+      <address>г. Киев, пр-т Леси Украинки, 26
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
       <a href="tel:+380991111111">+38 099 111 11 11</a>
+      </address>
     </footer>
   </body>
 </html>
