--- a/index.html
+++ b/index.html
@@ -40,15 +40,11 @@
           </li>
           <li>
             <h3>Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
+            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
           </li>
           <li>
             <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
+            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
           </li>
           <li>
             <h3>Современные технологии</h3>
@@ -97,9 +93,10 @@
       <!--footer logo-->
       <a href="/">WebStudio</a>
       <!--footer contact-->
-      <address>г. Киев, пр-т Леси Украинки, 26
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380991111111">+38 099 111 11 11</a>
+      <address>
+        г. Киев, пр-т Леси Украинки, 26
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380991111111">+38 099 111 11 11</a>
       </address>
     </footer>
   </body>
