--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li><img src="./img/img.jpg" alt="Дизайн" width="370" height="294" /></li>
-          <li><img src="./img/img(1).jpg" alt="Адаптация" width="370" height="294" /></li>
-          <li><img src="./img/img(2).jpg" alt="Код" width="370" height="294" /></li>
+          <li><img src="./img/img1.jpg" alt="Адаптация" width="370" height="294" /></li>
+          <li><img src="./img/img2.jpg" alt="Код" width="370" height="294" /></li>
         </ul>
       </section>
       <!--team-->
@@ -71,17 +71,17 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./img/imgTeams(1).jpg" alt="Ольга Репина" width="270" height="260" />
+            <img src="./img/imgTeams1.jpg" alt="Ольга Репина" width="270" height="260" />
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./img/imgTeams(2).jpg" alt="Николай Тарасов" width="270" height="260" />
+            <img src="./img/imgTeams2.jpg" alt="Николай Тарасов" width="270" height="260" />
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./img/imgTeams(3).jpg" alt="Михаил Ермаков" width="270" height="260" />
+            <img src="./img/imgTeams3.jpg" alt="Михаил Ермаков" width="270" height="260" />
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
@@ -94,7 +94,7 @@
       <a href="/">WebStudio</a>
       <!--footer contact-->
       <address>
-        г. Киев, пр-т Леси Украинки, 26
+         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380991111111">+38 099 111 11 11</a>
       </address>
